--- a/.github/workflows/python-app-ci.yml
+++ b/.github/workflows/python-app-ci.yml
@@ -26,6 +26,7 @@ jobs:
 
     - name: Run tests
       run: |
+        python -m pip install coverage
         python -m coverage run -m pytest tests
         python -m coverage report -m
 
