--- a/.github/workflows/python-app-ci.yml
+++ b/.github/workflows/python-app-ci.yml
@@ -2,7 +2,7 @@
 
 name: Python application CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -26,7 +26,5 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m pip install coverage
-        python -m coverage run -m pytest tests
-        python -m coverage report -m
+       python -m pytest tests
 
